--- a/SMS.Web/SMS.Web.csproj
+++ b/SMS.Web/SMS.Web.csproj
@@ -327,6 +327,7 @@
     <Content Include="Assets\js\popper.min.js" />
     <Content Include="Assets\js\sb-admin-2.js" />
     <Content Include="Assets\js\sb-admin-2.min.js" />
+    <Content Include="Assets\js\utils.js" />
     <Content Include="Assets\vendor\bootstrap\js\bootstrap.bundle.js" />
     <Content Include="Assets\vendor\bootstrap\js\bootstrap.bundle.min.js" />
     <Content Include="Assets\vendor\bootstrap\js\bootstrap.js" />
