--- a/SMS.Models/SMS.Models.csproj
+++ b/SMS.Models/SMS.Models.csproj
@@ -78,6 +78,7 @@
     <Compile Include="EF\SystemConfig.cs" />
     <Compile Include="EF\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Util.cs" />
     <Compile Include="ViewModel\BringInViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
