--- a/SMS.Models/App.config
+++ b/SMS.Models/App.config
@@ -23,4 +23,16 @@
   <connectionStrings>
     <!--<add name="HrTimeDBContext" connectionString="data source=10.126.122.30;initial catalog=DB_Attendence;persist security info=True;user id=sv_42001005;password=ABcd@1234;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
