--- a/SMS.Web/SMS.Web.csproj
+++ b/SMS.Web/SMS.Web.csproj
@@ -237,10 +237,6 @@
     </Compile>
     <Compile Include="Helpers\Authorization.cs" />
     <Compile Include="Models\LoginModel.cs" />
-    <Compile Include="Models\ReportParams.cs" />
-    <Compile Include="Models\Report\BringInItemRPModel.cs" />
-    <Compile Include="Models\Report\BringInRPModel.cs" />
-    <Compile Include="Models\Report\ListBringInRPModel.cs" />
     <Compile Include="Models\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reports\bring_in\BringInReport.cs">
@@ -2291,6 +2287,9 @@
     <Content Include="Views\BringIn\BIReport.cshtml" />
     <Content Include="Views\Delegate\Delegate.cshtml" />
     <Content Include="Views\Delegate\ListEmployee.cshtml" />
+    <Content Include="Views\LeaveEarly\SummaryLE.cshtml" />
+    <Content Include="Views\BringOut\BOReport.cshtml" />
+    <Content Include="Views\Guest\GuestReport.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\User\" />
