--- a/SMS.Web/Web.config
+++ b/SMS.Web/Web.config
@@ -19,10 +19,10 @@
 	</appSettings>
 
 	<connectionStrings>
-		<!--<add name="SMSDbContext" connectionString="Data Source=DESKTOP-LEFPNID;Initial Catalog=DB_SMS;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+		<add name="SMSDbContext" connectionString="Data Source=DESKTOP-LEFPNID;Initial Catalog=DB_SMS;Integrated Security=True" providerName="System.Data.SqlClient" />
 		<!--<add name="SMSDbContext" connectionString="Data Source=DESKTOP-I1NVSIE;Initial Catalog=DB_SMS;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-		<add name="SMSDbContext" connectionString="Data Source=10.126.122.30;Initial Catalog=DB_SMS;Persist Security Info=True;User ID=sv_42001005;Password=ABcd@1234" providerName="System.Data.SqlClient" />
-		<add name="HrTimeDBContext" connectionString="data source=10.126.122.30;initial catalog=DB_Attendence;persist security info=True;user id=sv_42001005;password=ABcd@1234;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+		<!--<add name="SMSDbContext" connectionString="Data Source=10.126.122.30;Initial Catalog=DB_SMS;Persist Security Info=True;User ID=sv_42001005;Password=ABcd@1234" providerName="System.Data.SqlClient" />
+		<add name="HrTimeDBContext" connectionString="data source=10.126.122.30;initial catalog=DB_Attendence;persist security info=True;user id=sv_42001005;password=ABcd@1234;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
 	</connectionStrings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.7.2">
