--- a/SMS.Models/SMS.Models.csproj
+++ b/SMS.Models/SMS.Models.csproj
@@ -88,7 +88,6 @@
     <Compile Include="EF\Bring_Out.cs" />
     <Compile Include="EF\Bring_Out_Items.cs" />
     <Compile Include="EF\Go_Out.cs" />
-    <Compile Include="EF\GroupUser.cs" />
     <Compile Include="EF\Guest.cs" />
     <Compile Include="EF\Guest_Item.cs" />
     <Compile Include="EF\HrTimeDBContext.cs" />
@@ -97,7 +96,9 @@
     <Compile Include="EF\Role.cs" />
     <Compile Include="EF\SMSDbContext.cs" />
     <Compile Include="EF\SystemConfig.cs" />
+    <Compile Include="EF\Team.cs" />
     <Compile Include="EF\User.cs" />
+    <Compile Include="EF\UserRole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Util.cs" />
     <Compile Include="ViewModel\BringInViewModel.cs" />
