--- a/SMS.Web/SMS.Web.csproj
+++ b/SMS.Web/SMS.Web.csproj
@@ -241,22 +241,17 @@
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reports\leave_early\DetailsReport\dsLEDetails.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>dsLEDetails.xsd</DependentUpon>
-    </Compile>
     <Compile Include="Reports\leave_early\dsLE.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>dsLE.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Reports\leave_early\LEReport.aspx.cs">
-      <DependentUpon>LEReport.aspx</DependentUpon>
+    <Compile Include="Reports\leave_early\ReportLE.aspx.cs">
+      <DependentUpon>ReportLE.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Reports\leave_early\LEReport.aspx.designer.cs">
-      <DependentUpon>LEReport.aspx</DependentUpon>
+    <Compile Include="Reports\leave_early\ReportLE.aspx.designer.cs">
+      <DependentUpon>ReportLE.aspx</DependentUpon>
     </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="Startup.cs" />
@@ -284,6 +279,7 @@
     <Content Include="Assets\css\w3-customize.css" />
     <Content Include="Assets\img\Anh nha may chon.jpg" />
     <Content Include="Assets\img\black-hyundai-suv-1519192.jpg" />
+    <Content Include="Assets\img\icons8-calendar-32.png" />
     <Content Include="Assets\img\icons8-key-40.png" />
     <Content Include="Assets\img\kvp.png" />
     <Content Include="Assets\img\logo.png" />
@@ -2000,7 +1996,7 @@
     <Content Include="Localization\vi.xml" />
     <Content Include="Localization\zh-CHS.xml" />
     <Content Include="Localization\zh-CHT.xml" />
-    <Content Include="Reports\leave_early\LEReport.aspx" />
+    <Content Include="Reports\leave_early\ReportLE.aspx" />
     <Content Include="Scripts\bootbox.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -2175,17 +2171,6 @@
     <Content Include="Reports\leave_early\dsLE.xsc">
       <DependentUpon>dsLE.xsd</DependentUpon>
     </Content>
-    <Content Include="Reports\leave_early\DetailsReport\dsLEDetails.xsc">
-      <DependentUpon>dsLEDetails.xsd</DependentUpon>
-    </Content>
-    <None Include="Reports\leave_early\DetailsReport\dsLEDetails.xsd">
-      <SubType>Designer</SubType>
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>dsLEDetails.Designer.cs</LastGenOutput>
-    </None>
-    <Content Include="Reports\leave_early\DetailsReport\dsLEDetails.xss">
-      <DependentUpon>dsLEDetails.xsd</DependentUpon>
-    </Content>
     <None Include="Reports\leave_early\dsLE.xsd">
       <SubType>Designer</SubType>
       <Generator>MSDataSetGenerator</Generator>
@@ -2318,7 +2303,7 @@
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Reports\leave_early\ReportLE.rdlc" />
+    <EmbeddedResource Include="Reports\leave_early\Report_LE.rdlc" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
